Fix the text alignment on the dashboard top widgets

--- a/css/partials/_dashboard-top-widgets.sass
+++ b/css/partials/_dashboard-top-widgets.sass
@@ -18,6 +18,10 @@
         box-sizing      : border-box
         -moz-box-sizing : border-box
 
+  
+  & .col-xs-9
+    float: right
+    
   & .huge
     font-size: 2.5em
 
